force-app/main/default/objects/DFD_Service_Rule__c/DFD_Service_Rule__c.object-meta.xml
<CustomObject>
    <label>Service Rule</label>
    <nameField>
        <label>Service Rule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Service Rules</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>