force-app/main/default/objects/DFD_Service_Rule__c/fields/Payload_Details_Mapping__c.field-meta.xml
<CustomField>
    <fullName>Payload_Details_Mapping__c</fullName>
    <label>Payload Details Mapping</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>