force-app/main/default/objects/DFD_Service_Rule__c/fields/Service_Rule_Configuration__c.field-meta.xml
<CustomField>
    <fullName>Service_Rule_Configuration__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Rule Configuration</label>
    <referenceTo>DFD_Service_Configuration__c</referenceTo>
    <relationshipLabel>Service Rules</relationshipLabel>
    <relationshipName>Service_Rules</relationshipName>
    <type>Lookup</type>
</CustomField>